fix some layout problem

--- a/public/css/questionnaire.css
+++ b/public/css/questionnaire.css
@@ -23,3 +23,13 @@
 .container{
     margin-top: 0px;
 }
+
+
+.buttonColor {
+    background-color: #696969;
+    font-weight: 400;
+    color: white;
+    font-size: 36px;
+    border: 1px solid black;
+    margin: 10px 0 20px;
+}
